--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "4571:4571"
       - "8080:8080"
     environment:
-      - SERVICES=s3,lambda,secretsmanager,logs
+      - SERVICES=s3,lambda,secretsmanager,logs,firehose
       - DATA_DIR=/tmp/localstack/data
       - DEFAULT_REGION=ap-northeast-1
     volumes:
